<resources>
    <string name="app_name">"MPAS"</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PREFERENCE_FILE">turbotec.mpas.PREFERENCE_FILE</string>
    <string name="TabsControl">TabsControl</string>
    <string name="DeviceID">Device Unique ID</string>
    <string name="Change">Change</string>
    <string name="Token">Token</string>
    <string name="Name">Name</string>
    <string name="FileVersion">FileVersion</string>
    <string name="defaultValue">Not_Saved</string>
    <string name="defaultTabs">111</string>
    <string name="ErrorMessage">ErrorMessage</string>
    <string name="Username">Username</string>
    <string name="Activation">Activation</string>
    <string name="Password">Password</string>
    <string name="Username_Password_File">LoginDetails</string>
    <string name="Status">Status</string>
    <string name="LastCheckHour">LastCheckHour</string>
    <string name="LastCheckDay">LastCheckDay</string>
    <string name="NotActive">NotActive</string>
    <string name="MyFile">MyFile</string>
    <string name="Installing">Installing ...</string>

    <string name="OK">OK</string>
    <string name="True">True</string>
    <string name="Inserted">Inserted</string>
    <string name="Wait">Wait</string>
    <string name="What">What</string>

    <string name="Report">Report</string>

    <string name="MEETING_ID">Meeting ID</string>
    <string name="MEETING_TOPIC">MEETING TOPIC</string>
    <string name="MEETING_CREATOR">MEETING CREATOR</string>
    <string name="MEETING_ATTENDANCE">MEETING ATTENDANCE</string>
    <string name="MEETING_SECRETARY">MEETING SECRETARY</string>
    <string name="MEETING_SERVICES">MEETING SERVICES</string>
    <string name="MEETING_ROOM">MEETING ROOM</string>
    <string name="MEETING_EQUIPMENT">MEETING EQUIPMENT</string>
    <string name="MEETING_START_DATE">MEETING START DATE</string>
    <string name="MEETING_END_DATE">MEETING END DATE</string>
    <string name="MEETING_PER_DATE">MEETING PER DATE</string>
    <string name="MEETING_START_TIME">MEETING START TIME</string>
    <string name="MEETING_END_TIME">MEETING END TIME</string>


    <string name="ID">Unique ID</string>
    <string name="Title">Title</string>
    <string name="Body">Body</string>
    <string name="Link">Link</string>
    <string name="Critical">Critical</string>
    <string name="Delivered">Delivered</string>
    <string name="Seen">Seen</string>
    <string name="Deleted">Deleted</string>
    <string name="SendSeen">SendSeen</string>
    <string name="error_invalid_password">Error! Password is empty.</string>
    <string name="error_field_required">Error! Username is empty.</string>

    <string name="Secretary">Secretary</string>
    <string name="Date">Date</string>

    <string name="TID">TID</string>
    <string name="Subject">Subject</string>
    <string name="TCreator">TCreator</string>
    <string name="Creator">Creator</string>
    <string name="DueDate">DueDate</string>
    <string name="TStatus">TStatus</string>
    <string name="TDescription">TDescription</string>
    v
    <string name="Description">Description</string>
    <string name="Responsible">Responsible</string>
    <string name="TReport">TReport</string>
    <string name="TEditable">TEditable</string>
    <string name="TReplyAble">TReplyAble</string>
    <string name="TDeletable">TDeletable</string>
    <string name="TisCreator">isCreator</string>
    <string name="TisResponsible">isResponsible</string>
    <string name="TNameResponsible">NameResponsible</string>


    <string name="WaitForActivation">Please wait for activation</string>
    <string name="Waiting">Please wait</string>
    <string name="Register">Register</string>
    <string name="Waiting_for_Network">Waiting for Network ...</string>
    <string name="Connecting">Connecting ...</string>
    <string name="Updating">Updating ... </string>

    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_help">Help</string>
    <string name="menu_read">Mark as Read</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_deselect_all">Deselect All</string>

    <string name="search_hint">Search</string>

    <string name="dialog_message">Are you sure?</string>
    <string name="Save_in_Calendar">Save in Calendar</string>
    <string name="Delete_Button">Delete</string>
    <string name="Reply_Button">Reply</string>
    <string name="Edit_Done_Button">Done</string>
    <string name="Filter_Done_Button">Done</string>
    <string name="Add_Done_Button">Done</string>
    <string name="Reply_Done_Button">Done</string>
    <string name="Edit_Button">Edit</string>


</resources>
