<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_select_all"
        android:checked="false"
        android:textAllCaps="false"
        android:title="@string/menu_select_all"
        app:showAsAction="never" />
    <!--android:checkable="true"-->

    <item
        android:id="@+id/menu_read"
        android:icon="@mipmap/ic_done_all_black_24dp"
        android:textAllCaps="false"
        android:title="@string/menu_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@mipmap/ic_delete_black_24dp"
        android:textAllCaps="false"
        android:title="@string/menu_delete"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_help"
        app:showAsAction="never" />


    <!--</group>-->
</menu>

