<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:id="@+id/g"-->
    <!--android:checkableBehavior="all">-->

    <!--<item-->
    <!--android:id="@+id/menu_select_all"-->
    <!--android:title="@string/menu_select_all"-->
    <!--android:icon="@mipmap/ic_check_box_black_24dp"-->
    <!--app:showAsAction="always|withText"/>-->
    <item
        android:id="@+id/menu_select_all"
        android:checkable="true"
        android:checked="false"
        android:icon="@mipmap/ic_check_box_black_24dp"
        android:textAllCaps="false"
        android:title="@string/menu_select_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_read"
        android:icon="@mipmap/ic_done_all_black_24dp"
        android:textAllCaps="false"
        android:title="@string/menu_read"
        app:showAsAction="always|withText" />


    <item
        android:id="@+id/menu_delete"
        android:icon="@mipmap/ic_delete_black_24dp"
        android:textAllCaps="false"
        android:title="@string/menu_delete"
        app:showAsAction="always|withText" />


    <!--</group>-->
</menu>

