<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/Title" />

    <EditText
        android:id="@+id/titlefilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dip"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/Body" />


    <EditText
        android:id="@+id/bodyfilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titledetail2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dip"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dip"
        android:layout_marginTop="5dp"
        android:gravity="start"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp" />


    <Button
        android:id="@+id/FilterDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:text="@string/Filter_Done_Button"
        android:textAllCaps="false" />


</LinearLayout>
