<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/Subject" />

        <EditText
            android:id="@+id/titlefilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dip"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:text="@string/Description" />


        <EditText
            android:id="@+id/descriptionfilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titledetail2"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15dip"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dip"
            android:layout_marginTop="5dp"
            android:gravity="start"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:text="@string/Creator"
                android:textAlignment="center" />

            <AutoCompleteTextView
                android:id="@+id/creatorfilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionfilter"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="20"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="5"
                android:text="@string/Responsible"
                android:textAlignment="center" />


            <AutoCompleteTextView
                android:id="@+id/responsiblefilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionfilter"
                android:layout_marginEnd="15dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="10dip"
                android:layout_marginTop="5dp"
                android:layout_weight="20"
                android:gravity="start"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="0.15"
            android:gravity="center">

            <Button
                android:id="@+id/FilterDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/Filter_Done_Button"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
