<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_weight="1"-->
    <!--android:background="?attr/colorPrimary"-->
    <!--android:minHeight="?attr/actionBarSize"-->
    <!--android:theme="?attr/actionBarTheme" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--<ImageView-->
        <!--android:id="@id/dummy"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@+id/statedetail2"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginRight="8dip"-->
        <!--android:layout_weight="1"-->
        <!--android:textSize="16sp" />-->


        <!--android:layout_alignParentRight="true"-->

        <TextView
            android:id="@+id/TDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Row2"
            android:layout_marginEnd="15dip"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dip"
            android:layout_marginTop="10dp"
            android:gravity="start"

            android:textColor="#000000"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@id/Row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Subject">

            <TextView
                android:id="@+id/TCreator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/Subject"
                android:layout_marginLeft="8dip"
                android:layout_marginStart="8dip"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/DueDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:layout_marginRight="8dip"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/TStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dip"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="16sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/TDescription"
            android:layout_marginTop="10dp"
            android:gravity="center">


            <Button
                android:id="@+id/ButtonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Row2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dip"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/Delete_Button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/ButtonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Row2"

                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dip"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/Edit_Button"
                android:textAllCaps="false" />


            <Button
                android:id="@+id/ButtonReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Row2"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dip"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:text="@string/Reply_Button"
                android:textAllCaps="false" />
        </LinearLayout>


    </RelativeLayout>


</ScrollView>
